deploy/k8s/global-config/np.kong.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-kong-ingress
  namespace: firecrest
spec:
  podSelector:
    matchLabels:
      role: gateway
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 8000
      protocol: TCP
